--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
     "start": "nodemon src/server.js"
   },
   "keywords": [],
