add script down migrate

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "migrate": "knex migrate:latest",
+    "down": "knex migrate:down",
     "seed": "knex seed:run",
     "start": "nodemon src/server.js"
   },
