--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "knex": "^0.21.1",
+    "knex": "^0.21.5",
+    "mysql": "^2.18.1",
     "pg": "^8.2.1"
   },
   "devDependencies": {
