--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "pg": "^8.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sucrase": "^3.17.0",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "migrate": "knex migrate:latest",
